# notebookllm

./: .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: agent_integration.rst  api.rst  cli.rst  conf.py  index.rst
docs/superpowers/plans/: 2026-06-04-notebookllm-merge-implementation.md  2026-06-21-notebookllm-enhancement-plan.md  2026-07-05-colab-execution-plan.md
docs/superpowers/specs/: 2026-06-04-notebookllm-merge-redesign.md
logs_77671553050/: 0_build-and-deploy.txt
logs_77671553050/build-and-deploy/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install dependencies.txt  5_Build documentation.txt  6_Setup Pages.txt  system.txt
notebookllm/: __init__.py  models.py
notebookllm/cli/: __init__.py  commands.py
notebookllm/converters/: __init__.py  llm_optimizer.py
notebookllm/loaders/: __init__.py  base.py  deepnote.py  ipynb.py  marimo.py  markdown.py  percent.py  quarto.py  rmarkdown.py  script.py
notebookllm/mcp/: __init__.py  engine.py  server.py  session.py
notebookllm/utils/: __init__.py  detect.py  tokenizer.py  validation.py
skills/notebookllm/: SKILL.md
tests/: conftest.py  test_cli.py  test_mcp.py  test_mcp_session.py  test_models.py  test_roundtrip.py  test_validation.py
tests/benchmarks/: __init__.py  test_speed.py  test_token_efficiency.py
tests/fixtures/: sample.ipynb  sample_marimo.py  sample_markdown.md  sample_percent.py  sample_quarto.qmd  sample_rmarkdown.Rmd
tests/test_converters/: test_llm_optimizer.py
tests/test_loaders/: test_base.py  test_deepnote.py  test_detect.py  test_dispatch.py  test_ipynb.py  test_marimo.py  test_markdown.py  test_percent.py  test_quarto.py  test_rmarkdown.py  test_script.py  test_tokenizer.py
