[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookllm"
version = "3.0.0"
description = "Convert and optimize Jupyter notebooks for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Yasir Raza", email = "yasir@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nbformat>=5.9",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "rich>=13.0",
]
mcp = [
    "mcp[cli]>=1.8.1",
]
execute = [
    "jupyter_client>=8.0",
]
stream = [
    "ijson>=3.5",
]
yaml = [
    "pyyaml>=6.0",
]
all = [
    "notebookllm[cli,mcp,execute,stream,yaml]",
]
dev = [
    "click>=8.1",
    "mcp[cli]>=1.8.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.1",
]

[project.scripts]
notebookllm = "notebookllm.cli.commands:cli"
notebookllm-server = "notebookllm.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notebookllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"

