[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookllm"
version = "2.0.0"
description = "Convert and optimize Jupyter notebooks for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Yasir Raza", email = "yasirabdali6@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nbformat>=5.9",
    "jupyter_client>=8.0",
    "ijson>=3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "rich>=13.0",
]
mcp = [
    "mcp[cli]>=1.8.1",
]
token = [
    "tiktoken>=0.7",
]
all = [
    "notebookllm[cli,mcp,token]",
]
dev = [
    "click>=8.1",
    "rich>=13.0",
    "mcp[cli]>=1.8.1",
    "tiktoken>=0.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]
docs = [
    "click>=8.1",
    "mcp[cli]>=1.8.1",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Homepage = "https://github.com/yasirrazaa/notebookllm"
Repository = "https://github.com/yasirrazaa/notebookllm"
Issues = "https://github.com/yasirrazaa/notebookllm/issues"
Documentation = "https://yasirrazaa.github.io/notebookllm"

[project.scripts]
notebookllm = "notebookllm.cli.commands:cli"
notebookllm-server = "notebookllm.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notebookllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (e.g., large notebook streaming)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
